--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <title>LEARN GIT & GITHUB</title>
         <link rel="stylesheet" href="./style.css" />
+        <link rel="stylesheet" href="./style2.css" />
     </head>
     <body>
         <p>This is APP</p>
