--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="./style2.css" />
     </head>
     <body>
-        <p>This is APP</p>
+        <p>This is NEW APP</p>
     </body>
 </html>
