Update truc tiep tren repo

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
         <link rel="stylesheet" href="./style2.css" />
     </head>
     <body>
-        <p>This is APP NEW</p>
+        <p>This is APP NEW khong giong video</p>
     </body>
 </html>
